hero updates, more stuff.

--- a/src/pages/services-commercial.html
+++ b/src/pages/services-commercial.html
@@ -2,11 +2,24 @@
 title: Generation Homes | Commercial builds
 description: add desc
 
-hero-bg:  /assets/img/fpo/house-186400_1920.jpg
-hero-class: hero--large
+hero-bg:  /assets/img/hero/commercial-header.jpg
+hero-class: bg--dark bg--50 text--light hero-content--fullwidth
+hero-title: <span class="text-xl">Commercial</span><br>Services
 
-mainimage: /assets/img/commercial/Office5.jpg
+mainimage: /assets/img/commercial/DesignCenter014.jpg
 images:
+  - file: /assets/img/commercial/DesignCenter014.jpg
+    alt: yay
+  - file: /assets/img/commercial/DesignCenter012.jpg
+    alt: maybe
+  - file: /assets/img/commercial/DesignCenter001.jpg
+    alt: hi again
+  - file: /assets/img/commercial/NL5A9419.jpg
+    alt: Office1
+  - file: /assets/img/commercial/NL5A9405.jpg
+    alt: i am thing
+  - file: /assets/img/commercial/NL5A9399.jpg
+    alt: hello
   - file: /assets/img/commercial/Office5.jpg
     alt: alt 1
   - file: /assets/img/commercial/Office3.jpg
@@ -15,50 +28,31 @@ images:
     alt: Office2
   - file: /assets/img/commercial/Office1.jpg
     alt: Office1
-  - file: /assets/img/commercial/NL5A9419.jpg
-    alt: Office1
-  - file: /assets/img/commercial/NL5A9405.jpg
-    alt: i am thing
-  - file: /assets/img/commercial/NL5A9399.jpg
-    alt: hello
-  - file: /assets/img/commercial/DesignCenter014.jpg
-    alt: yay
-  - file: /assets/img/commercial/DesignCenter012.jpg
-    alt: maybe
-  - file: /assets/img/commercial/DesignCenter001.jpg
-    alt: hi again
 ---
 
 
 {{> hero }}
 
+<div class="grid-container">
+  <div class="grid-x grid-padding-x">
+    <div class="large-12 cell">
+
+      <h2>Combining Resources from Residential to Commercial</h2>
+      <p>
+      Generation Homes and affiliates have been in business since 1996. While we are primarily known for our residential construction projects, we have been quietly involved in a diverse array of commercial projects.
+      </p>
+
+      <p>
+      We have been the prime contractor on new garden office buildings, tenant improvements and the reconstruction of both the interior and exteriors of several commercial buildings. We have a breadth of experience that ranges from the standard office improvement to complete and extensive reconstruction. In our experience these have included, complete historical retrofit of church facilities and extensive interior improvements including; medical office, general office and décor centers.
+      </p>
+
+      <p>
+      One of our greatest attributes is being able to combine our resources from our residential and commercial experience to offer the best possible economics solutions for any project.
+      </p>
+
+    </div>
+  </div>
+</div>
+
 {{> gallery }}
 
-    <div class="site-hero">
-      <div class="site-hero-content site-hero-content--fullwidth">
-        <div class="site-hero-content-inner site-hero-content-inner--light">
-          <h1>Commercial Services</h2>
-        </div>
-      </div>
-    </div>
-
-    <div class="grid-container">
-      <div class="grid-x grid-padding-x">
-        <div class="large-12 cell">
-
-          <h2>Combining resources from Residential to Commercial</h2>
-          <p>
-          Generation Homes and affiliates have been in business since 1996. While we are primarily know for our residential construction projects, we have been quietly involved in a diverse array of commercial projects.
-          </p>
-
-          <p>
-          We have been the prime contractor on new garden office buildings, tenant improvements and the reconstruction of both the interior and exteriors of several commercial buildings. We have a breadth of experience that ranges from the standard office improvement to complete and extensive reconstruction. In our experience these have included, complete historical retrofit of church facilities and extensive interior improvements including; medical office, general office and décor centers.
-          </p>
-
-          <p>
-          One of our greatest attributes is being able to combine our resources from our residential and commercial experience to offer the best possible economics solutions for any project.
-          </p>
-
-        </div>
-      </div>
-    </div>
