--- a/src/pages/services-new-homes.html
+++ b/src/pages/services-new-homes.html
@@ -38,6 +38,18 @@ images:
           <p>View our New Homes gallery <a href="#">here</a> &rsaquo;</p>
         </div>
       </div>
+
+
+<p>
+If you’re a realtor or home buyer looking for a new home for sale in the Fresno California area, Central Unified School District, Sanger Unified School District, or King Canyon Unified School District, then contact us and let us know how we can help.
+</p>
+
+<p>
+Our new home construction focus is on not only providing the best in craftsmanship and materials but incorporating new and cutting edge perspectives in home performance and livability. We integrate
+</p>
+
+<hr>
+
       <p>
       Generation Homes is more than just a general contractor for Fresno, CA — We are a respected builder, serving the Central Valley since 1996 with a diverse background in home building and remodeling. Having built more than 1,000 homes – whether they were part of large single-family communities, upscale custom homes built for those with discerning taste and a demand for attention to detail, or custom kitchen, bath, and whole-home remodels – we continue our drive to be your builder of choice.
       </p>
