--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,6 +26,20 @@ hero-class: hero--large
 
   <div class="grid-x grid-padding-x">
     <div class="large-12 cell">
+
+<p>
+Generation Homes offers full service construction solutions that range from new homes, new home renovations, remodeling, and home improvement. Our highly experienced and skilled team is here to ensure that our customers expectations are met and exceeded.
+</p>
+
+<p>
+As a leading construction company here in Central California, we can help make your home more comfortable and efficient by reducing maintenance and utility costs, not to mention the new look and features all while increasing your home's value. Generation Homes offers complete construction services that strive for the highest standards of customer service. If you’re seeking a new home, a custom home, or an existing homeowner looking for remodeling, we deliver the highest in quality and an experience that is open and transparent for the Central San Joaquin Valley.
+</p>
+
+Rated at the highest level for client satisfaction by the Houzz community.
+<a href="https://www.houzz.com/badges/user/generation_homes">view our houzz profile</a>
+
+<hr>
+
       <p>
       There are certain things from the past that just have a lasting effect, like great style, enviable craftsmanship, and the sense of enduring value. While this seems like an exaggeration, we believe that these places exist, and can be found in abundance right here in the Fresno, Madera, Kings and Tulare counties, brought to you by Generation Homes.
       </p>
