--- a/src/pages/services-new-homes.html
+++ b/src/pages/services-new-homes.html
@@ -3,7 +3,7 @@ title: Generation Homes | New Homes
 description: add desc
 
 hero-bg:  /assets/img/new_construction/Cascadel.jpg
-hero-class: bg--dark bg--50 text--light
+hero-class: bg--dark bg--80 text--light
 hero-title: <span class="text-xl">New Home</span><br>Construction
 
 mainimage: /assets/img/new_construction/Cascadel.jpg
@@ -28,7 +28,7 @@ images:
 {{> hero }}
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x">
+  <div class="grid-x grid-padding-x grid-padding-y">
     <div class="large-12 cell">
 
       <h2>New Home Construction that focuses on Quality and Craftsmanship</h2>
