--- a/src/pages/services-commercial.html
+++ b/src/pages/services-commercial.html
@@ -34,7 +34,7 @@ images:
 {{> hero }}
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x">
+  <div class="grid-x grid-padding-x grid-padding-y">
     <div class="large-12 cell">
 
       <h2>Combining Resources from Residential to Commercial</h2>
