--- a/src/pages/services-remodel.html
+++ b/src/pages/services-remodel.html
@@ -10,10 +10,9 @@ hero-title: <span class="text-xl">Home Remodeling</span><br>Services
 {{> hero }}
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x">
+  <div class="grid-x grid-padding-x grid-padding-y">
     <div class="large-12 cell">
 
-      <h2>Home Remodeling Services</h2>
       <p>
         Generation Homes was started in 1996 but our collective experience in residential construction and remodeling greatly exceeds our years in business. During this course of time we have actively been involved in construction activities from basic bath and kitchen remodels to complete home makeovers. We have the ability and knowledge to reconstruct historically significant homes to basic room modifications and additions. We are based here in the Central San Joaquin Valley but have been contracted by our clients for projects throughout California.
       </p>
@@ -27,6 +26,7 @@ hero-title: <span class="text-xl">Home Remodeling</span><br>Services
       </p>
     </div>
   </div>
+
   <div class="grid-x grid-padding-x">
     <div class="large-12 cell">
       <h3>Full Home Remodels</h3>
