--- a/src/pages/services-commercial.html
+++ b/src/pages/services-commercial.html
@@ -42,32 +42,12 @@ images:
       <div class="card gallery-trigger float-right gallery-trigger--right" type="button" data-toggle="gallery1" role="button">
         <img src="/assets/img/commercial/DesignCenter012.jpg" sizes="" alt="" class="" />
         <div class="card-section">
-          <p>View our Commercial gallery <a href="#">here</a> &rsaquo;</p>
+          <p><a href="#">Commercial projects gallery</a> &rsaquo;</p>
         </div>
       </div>
 
-
-<p>
-No project is too small or too large and we'll make sure your project is done right! Generation Homes is primarily known for our residential construction projects, but we have been involved in a diverse array of commercial projects.
-</p>
-
-<p>
-One of our greatest attributes is being able to combine our resources from our residential and commercial experience to offer the best possible economic solutions for any project.
-</p>
-
-<p>
-Generation homes have been the prime contractor on new garden office buildings, tenant improvements, and the reconstruction of both interior and exterior of several commercial buildings.
-</p>
-
-<p>
-We have a breadth of experience that ranges from standard office improvement, to complete and extensive reconstruction. This includes the complete historical retrofit of church facilities and extensive interior improvements including; medical offices, general offices, and décor centers.
-</p>
-
-<hr>
-
-
       <p>
-      Generation Homes and affiliates have been in business since 1996. While we are primarily known for our residential construction projects, we have been quietly involved in a diverse array of commercial projects.
+      Generation Homes and affiliates have been in business since 1996. While we are primarily known for our <a href="/services-remodel.html">residential</a> construction projects, we have been quietly involved in a diverse array of commercial projects.
       </p>
 
       <p>
@@ -93,18 +73,6 @@ We have a breadth of experience that ranges from standard office improvement, to
   data-animation-out="fade-out"
   data-reveal>
   <button class="close-button" aria-label="Close Gallery" type="button" data-close><span aria-hidden="true">&times;</span></button>
-  <h3 id="galler1y1_label" class="gallery-label">Commercial Gallery</h3>
+  <h3 id="galler1y1_label" class="gallery-label">Commercial Projects</h3>
   {{> gallery }}
 </div>
-
-
-Before & After Gallery
-Abdo Remodel
-Armstrong Remodel
-Bezmalinovic Remodel
-Baldwin Remodel
-Chaltraw Remodel
-Orlando Remodel
-Pipes Remodel
-Ross Remodel
-Wiggins Remodel
