--- a/src/pages/services-new-homes.html
+++ b/src/pages/services-new-homes.html
@@ -4,7 +4,7 @@ description: add desc
 
 hero-bg:  /assets/img/new_construction/Cascadel.jpg
 hero-class: bg--dark bg--80 text--light
-hero-title: <span class="text-xl">New Home</span><br>Construction
+hero-title: <span class="text-xl">New Homes</span><br>Focus on Quality and craftsmanship
 
 mainimage: /assets/img/new_construction/Cascadel.jpg
 images:
@@ -45,7 +45,7 @@ If you’re a realtor or home buyer looking for a new home for sale in the Fresn
 </p>
 
 <p>
-Our new home construction focus is on not only providing the best in craftsmanship and materials but incorporating new and cutting edge perspectives in home performance and livability. We integrate
+Our new home construction focus is on not only providing the best in craftsmanship and materials but incorporating new and cutting edge perspectives in home performance and livability. We integrate innovative construction methods and products to achieve a much higher standard for; sustainable cost savings, enduring design characteristics, and other lasting features for our homeowners.
 </p>
 
 <hr>
