--- a/src/pages/services-remodel.html
+++ b/src/pages/services-remodel.html
@@ -4,7 +4,7 @@ description: add desc
 
 hero-bg:  /assets/img/hero/remodel-header_v2.jpg
 hero-class: bg--dark bg--50 text--light
-hero-title: <span class="text-xl">Home Remodeling</span><br>Services
+hero-title: <span class="text-xl">Home Remodeling</span><br>Kitchen, Bath, Complete Home Makeovers
 ---
 
 {{> hero }}
