--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -1,15 +1,15 @@
 ---
 title: Generation Homes | Services we offer
 description: add desc
+
+hero-bg: /assets/img/hero/services-header.jpg
+hero-class: bg--dark bg--80 text--light
+hero-title: <span class="text-xl">Services</span><br>Residential, New Homes, Commercial
+
 ---
 
-    <div class="site-hero hero--homepage">
-      <div class="site-hero-content site-hero-content--fullwidth">
-        <div class="site-hero-content-inner site-hero-content-inner--light">
-          <h1>Generation Homes Services Offered</h2>
-        </div>
-      </div>
-    </div>
+{{> hero }}
+
 
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
