--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -8,32 +8,14 @@ description: add desc
       <div class="grid-x grid-padding-x grid-padding-y">
         <div class="large-12 cell">
 
-<h1 class="display">Connext with us</h1>
-<p style="font-size: 1.25rem;">
-Read what our clients have to say about working with Generation Homes.
-<br>You can read all of our <a href="https://www.houzz.com/browseReviews/generation_homes">reviews on our Houzz Profile</a>.
-</p>
-<div class="grid-x grid-padding-x grid-padding-Y medium-up-2">
-<div class="cell">
-         <h4 class="site-footer-title">Contact Info</h4>
+      <h1 class="display">Contact Us</h1>
+
+        <h4>Address</h4>
         <p>550 W. Alluvial, Suite #107<br>Fresno, CA 93711</p>
-        <p><a class="footer-link" href="tel:1 (559) 323-9700">1 (559) 323-9700</a></p>
-        <p><a class="footer-link" href="mailto:info@generation-homes.com">info@generation-homes.com</a></p>
-        <p>
-          Lic. #871183 - Commercial<br />
-          Lic. #821276 - Residential
-        </p>
-
-</div>
-
-
-
-<div class="cell">
-
-
-</div>
-
-</div>
+        <h4>Phone</h4>
+        <p><a href="tel:1 (559) 323-9700">1 (559) 323-9700</a></p>
+        <h4>Email</h4>
+        <p><a href="mailto:info@generation-homes.com">info@generation-homes.com</a></p>
 
         </div>
       </div>
