--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,26 +1,16 @@
 ---
-title: Generation Homes | Fresno Home Renovation Company for Kitchen and Bathroom Remodeling
-description: Generation Homes is a leading home renovation company in Fresno, CA specializing in Custom home renovation, kitchen remodeling and bathroom remodeling projects.
+title: Generation Homes & Commercial | Fresno Home Renovation Company for Kitchen and Bathroom Remodeling
+description: Generation Homes & Commercial is a leading home renovation company in Fresno, CA specializing in Custom home renovation, kitchen remodeling and bathroom remodeling projects.
 
 hero-bg:  /assets/img/fpo/house-186400_1920.jpg
 hero-class: hero--large
 ---
 
 
-<div class="site-hero {{ hero-class }}" style="background-image: url('{{ hero-bg }}');">
-  <div class="site-hero-content">
-    <div class="site-hero-content-inner site-hero-content-inner--light">
-      <h2>Life changes...<br />Good values shouldn't</h2>
-      <p>If you’re seeking home remodeling, a new custom home or commercial property improvements demanding expert construction solutions, Generation Homes can meet your every need.</p>
-      <a href="services.html" class="round button">learn more</a>
-    </div>
-  </div>
-</div>
-
 <div class="grid-container">
   <div class="grid-x grid-padding-x">
     <div class="large-12 cell">
-      <h1>How can Generation Homes help you?</h1>
+      <h1>How can Generation Homes & Commercial help you?</h1>
     </div>
   </div>
 
@@ -28,11 +18,11 @@ hero-class: hero--large
     <div class="large-12 cell">
 
 <p>
-Generation Homes offers full service construction solutions that range from new homes, new home renovations, remodeling, and home improvement. Our highly experienced and skilled team is here to ensure that our customers expectations are met and exceeded.
+Generation Homes & Commercial offers full service construction solutions that range from new homes, new home renovations, remodeling, and home improvement. Our highly experienced and skilled team is here to ensure that our customers expectations are met and exceeded.
 </p>
 
 <p>
-As a leading construction company here in Central California, we can help make your home more comfortable and efficient by reducing maintenance and utility costs, not to mention the new look and features all while increasing your home's value. Generation Homes offers complete construction services that strive for the highest standards of customer service. If you’re seeking a new home, a custom home, or an existing homeowner looking for remodeling, we deliver the highest in quality and an experience that is open and transparent for the Central San Joaquin Valley.
+As a leading construction company here in Central California, we can help make your home more comfortable and efficient by reducing maintenance and utility costs, not to mention the new look and features all while increasing your home's value. Generation Homes & Commercial offers complete construction services that strive for the highest standards of customer service. If you’re seeking a new home, a custom home, or an existing homeowner looking for remodeling, we deliver the highest in quality and an experience that is open and transparent for the Central San Joaquin Valley.
 </p>
 
 Rated at the highest level for client satisfaction by the Houzz community.
@@ -41,13 +31,13 @@ Rated at the highest level for client satisfaction by the Houzz community.
 <hr>
 
       <p>
-      There are certain things from the past that just have a lasting effect, like great style, enviable craftsmanship, and the sense of enduring value. While this seems like an exaggeration, we believe that these places exist, and can be found in abundance right here in the Fresno, Madera, Kings and Tulare counties, brought to you by Generation Homes.
+      There are certain things from the past that just have a lasting effect, like great style, enviable craftsmanship, and the sense of enduring value. While this seems like an exaggeration, we believe that these places exist, and can be found in abundance right here in the Fresno, Madera, Kings and Tulare counties, brought to you by Generation Homes & Commercial.
       </p>
       <p>
-      Generation Homes offers construction solutions that range from new homes, built within our neighborhoods or your home site, expertly tailored custom homes, and a full service of remodeling and renovation offerings. Our foremost priority is to meet and exceed our customers’ expectations through variety of resources that transcends through decades of experience.
+      Generation Homes & Commercial offers construction solutions that range from new homes, built within our neighborhoods or your home site, expertly tailored custom homes, and a full service of remodeling and renovation offerings. Our foremost priority is to meet and exceed our customers’ expectations through variety of resources that transcends through decades of experience.
       </p>
       <p>
-      We also know that buying a quality new home or building a new home is much harder today than it has ever been. Buying or building may not be right for you. However, a home remodel or home make-over can provide lasting benefits to the home you're currently in. Whether your project involves making simple home improvements, updating or renovating kitchens or bathrooms, or adding a new room to the home, Generation Homes can provide you with quality, cost effective and innovative construction services.
+      We also know that buying a quality new home or building a new home is much harder today than it has ever been. Buying or building may not be right for you. However, a home remodel or home make-over can provide lasting benefits to the home you're currently in. Whether your project involves making simple home improvements, updating or renovating kitchens or bathrooms, or adding a new room to the home, Generation Homes & Commercial can provide you with quality, cost effective and innovative construction services.
       </p>
       <p>
       Homeownership is typically the largest investment most people make. Renovating or remodeling your home is a sure way to increase the value of your home and property. Whether you plan to sell the home, refinance your mortgage, or are just investing in your home for the future, a remodeling project is a good way to increase your home's value.
@@ -59,7 +49,7 @@ Rated at the highest level for client satisfaction by the Houzz community.
       We also have a full service of commercial construction experience that ranges from simple tenant improvements to complete restorations and new construction.
       </p>
       <p>
-      Generation Homes offers complete construction services that strive for the highest of standards of customer service. So if you’re seeking a new home, a custom home, or an existing home owner looking for remodeling, we deliver the highest in quality and an experience that is open and transparent for the Central San Joaquin Valley… please check us out… we’d love to meet you.
+      Generation Homes & Commercial offers complete construction services that strive for the highest of standards of customer service. So if you’re seeking a new home, a custom home, or an existing home owner looking for remodeling, we deliver the highest in quality and an experience that is open and transparent for the Central San Joaquin Valley… please check us out… we’d love to meet you.
       </p>
     </div>
   </div>
