--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -1,5 +1,5 @@
 ---
-title: Generation Homes | Reviews | Client Testimonials
+title: Generation Homes & Commercial | Reviews | Client Testimonials
 
 description: add desc
 ---
@@ -10,7 +10,7 @@ description: add desc
 
 <h1 class="display">Client Testimonials</h1>
 <p style="font-size: 1.25rem;">
-Read what our clients have to say about working with Generation Homes.
+Read what our clients have to say about working with services-custom-homes.
 <br>You can read all of our <a href="https://www.houzz.com/browseReviews/generation_homes">reviews on our Houzz Profile</a>.
 </p>
 <div class="grid-x grid-padding-x grid-padding-Y medium-up-2">
@@ -33,37 +33,37 @@ Excellent experience! Very professional design and construction recommendations.
 
 
 
-<div class="review-name">BRIAN O'NEILL</div>
+<div class="review-name">Brian O'Neill</div>
 <div class="review-date">Project Date: August 2016</div>
 <p>
 Project costs came in exactly to what was quoted. Change orders were handled very professionally and timely. Work quality was top notch. Overall I would recommend this contractor and I would use them again.
 </p>
 
 
-<div class="review-name">christineremington</div>
+<div class="review-name">Christine Remington</div>
 <div class="review-date">Project Date: June 2016</div>
 <p>
 Robert and his team are absolutely amazing and were such a pleasure to work with! I would highly recommend them to anyone and we wouldn't want to work with anyone else on our next remodel or construction project
 </p>
 
 
-<div class="review-name">thebriggs</div>
+<div class="review-name">The Briggs</div>
 <div class="review-date">Project Date: March 2014</div>
 <p>
-We hired Generation homes to do a basic remodel of a home we purchased in Fresno while we lived in Maine. I met with them twice and then communicated via email and phone. New flooring, taking out a wet bar and replacing with a China Hutch, paint, remodel, a bathroom, new appliances, painted cabinets, new fireplaces with mantle, light textures and more. We were extremely pleased.
+We hired Generation Homes to do a basic remodel of a home we purchased in Fresno while we lived in Maine. I met with them twice and then communicated via email and phone. New flooring, taking out a wet bar and replacing with a China Hutch, paint, remodel, a bathroom, new appliances, painted cabinets, new fireplaces with mantle, light textures and more. We were extremely pleased.
 </p>
 
-<div class="review-name">shaught5</div>
+<div class="review-name">Haught Family</div>
 <div class="review-date">Project Date: December 2013</div>
 <p>
-We couldn't be more pleased with Generation Homes' remodel of our bathroom. During the beginning stage, Mary Jo, GH's designer, was helpful & patient in listening to my thoughts & providing ideas & options in establishing colors, style, textures & design of the bathroom that would fit us. She ordered everything before the work was started which made the construction time much shorter. Bob, GH's general contractor, scheduled and managed all of the sub-contractors to get the work done efficiently & in an orderly manner. He was there to make sure all of the work was done to the high standard of Generation Homes. Bob's timing & overseeing made this project run smoothly and meet the estimated completion of the project & with excellence. Generation Homes is a professional company that can be trusted to do the job right! Thank you Generation Homes!
+We couldn't be more pleased with Generation Homes' remodel of our bathroom. During the beginning stage, GH's designer, was helpful & patient in listening to my thoughts & providing ideas & options in establishing colors, style, textures & design of the bathroom that would fit us. They ordered everything before the work was started which made the construction time much shorter. Generation Homes scheduled and managed all of the sub-contractors to get the work done efficiently & in an orderly manner. They were there to make sure all of the work was done to the high standard of Generation Homes. Their timing & overseeing made this project run smoothly and meet the estimated completion of the project & with excellence. Generation Homes is a professional company that can be trusted to do the job right! Thank you Generation Homes!
 </p>
 
 
-<div class="review-name">cherylchacon</div>
+<div class="review-name">Cheryl Chacon</div>
 <div class="review-date">Project Date: July 2013</div>
 <p>
-Working with Mary Jo on the complete remodel of our two bathrooms was a great experience. She was accommodating to my schedule, determined my style preferences, and helped me select and coordinate the materials needed to make it all come together. Workers showed up when they said they would, and work progressed smoothly. There was also a time constraint due to my husband’s scheduled back surgery. The parts of the puzzle all came together and Generation Homes was able to finish the majority of the work before he returned home. This was such a positive experience compared to other contracted work we have had done in the past. I would not hesitate to contact Mary Jo and Generation Homes for future home improvement projects. They delivered a high quality job and were a pleasure to work with.
+Working with Generation Homes on the complete remodel of our two bathrooms was a great experience. They were accommodating to my schedule, determined my style preferences, and helped me select and coordinate the materials needed to make it all come together. Workers showed up when they said they would, and work progressed smoothly. There was also a time constraint due to my husband’s scheduled back surgery. The parts of the puzzle all came together and Generation Homes was able to finish the majority of the work before he returned home. This was such a positive experience compared to other contracted work we have had done in the past. I would not hesitate to contact Generation Homes for future home improvement projects. They delivered a high quality job and were a pleasure to work with.
 </p>
 
 
@@ -73,21 +73,21 @@ Working with Mary Jo on the complete remodel of our two bathrooms was a great ex
 
 <div class="cell">
 
-<div class="review-name">kimmymartin</div>
+<div class="review-name">Kim Martin</div>
 <div class="review-date">Project Date: March 2013</div>
 <p>
-Generation homes has done a bathroom/bedroom remodel as well as a recent kitchen/bath remodel in my home. They are wonderful to work with and have kept the completion of both projects on time!! There is an on-site contractor who monitors all work being done. Both the work ethic and friendliness of their subcontractors are awesome. The quality of work is outstanding and they make sure everything is done correctly. They provide a design coordinator, Mary-Jo, who helps you to make the many important decisions regarding, design , colors, fixtures etc...that are necessary when going through a remodeling process. She is very helpful, has a creative eye and is your biggest cheerleader through the entire event. I would highly recommend Generation Homes for either a remodel or a new construction project !!
+Generation homes has done a bathroom/bedroom remodel as well as a recent kitchen/bath remodel in my home. They are wonderful to work with and have kept the completion of both projects on time!! There is an on-site contractor who monitors all work being done. Both the work ethic and friendliness of their subcontractors are awesome. The quality of work is outstanding and they make sure everything is done correctly. They provide a design coordinator who helps you to make the many important decisions regarding, design, colors, fixtures etc...that are necessary when going through a remodeling process. They are very helpful, creative and your biggest cheerleader through the entire event. I would highly recommend Generation Homes for either a remodel or a new construction project !!
 </p>
 
-<div class="review-name">petelynnbaldwin</div>
+<div class="review-name">The Baldwins</div>
 <div class="review-date">Project Date: April 2012</div>
 <p>
-We had excellent service from Robert Wood and Bob Luis. We received a contract with all expected costs. When there were unavoidable changes, we were given new costs to analyze and determine if we wanted to go forward. Also, all subs and contractors were always on time. Our remodel experience was a positive one. We would use Generations Homes in the future and recommend them to my friends and family.
+We had excellent service from Genneration Homes. We received a contract with all expected costs. When there were unavoidable changes, we were given new costs to analyze and determine if we wanted to go forward. Also, all subs and contractors were always on time. Our remodel experience was a positive one. We would use Generations Homes in the future and recommend them to my friends and family.
 <br>Sincerely,<br>
 Pete and Lynn Baldwin
 </p>
 
-<div class="review-name">paularmstrong1</div>
+<div class="review-name">The Armstrongs</div>
 <div class="review-date">Project Date: June 2011</div>
 <p>
 Dear Friends,
@@ -110,16 +110,16 @@ A great team to work with. They helped with all aspects of our project (a bathro
 
 
 
-<div class="review-name">welkefam</div>
+<div class="review-name">Welke Family</div>
 <div class="review-date">Project Date: June 2008</div>
 <p>
-This is an unabashedly rave testimonial for the administrative and contracting staff of Generation Homes Commercial Builders, Fresno CA.
+This is an unabashedly rave testimonial for the administrative and contracting staff of Generation Homes & Commercial, Fresno CA.
 </p>
 <p>
 Approximately one year ago, Generation Homes took over responsibility for a major remolding and renovation project we had undertaken in San Francisco, CA. At the time Generation Homes "adopted" the refurbishing of our 120-year old four-story residence, costs were out of control, our previous contractor was at odds with the San Francisco Building Department, and the building's dry-rot, roofing, siding, plumbing, and electrical issues were daunting. We were at our wits' end.
 </p>
 <p>
-Virtually commuting to San Francisco from Fresno, the Generation Home personnel assessed and re-forecast a sensible budget for the makeover, recommended both structural relationship with the SF Building Department, and completed the entire project within the new budget and with the level of finished detail that far exceeded our expectations. Indeed, the finishing work has been described by neighbors as "stunning". As well, the work crews maintained excellent relations with our neighbors, no small accomplishment in a city where homes literally adjoin each other. And everything was completed on time.
+Virtually commuting to San Francisco from Fresno, the Generation Homes personnel assessed and re-forecast a sensible budget for the makeover, recommended both structural relationship with the SF Building Department, and completed the entire project within the new budget and with the level of finished detail that far exceeded our expectations. Indeed, the finishing work has been described by neighbors as "stunning". As well, the work crews maintained excellent relations with our neighbors, no small accomplishment in a city where homes literally adjoin each other. And everything was completed on time.
 </p>
 <p>
 It is hard for us to imagine a better building and home contracting organization than Generation Homes, and we would be pleased at any time, to elaborate on our wholly positive experiences working with the company.
