--- a/src/pages/services-painting.html
+++ b/src/pages/services-painting.html
@@ -1,10 +1,10 @@
 ---
-title: Generation Homes & Commercial | Commercial Services
+title: Generation Homes & Commercial | Painting Services
 description: add desc
 
 hero-bg:  /assets/img/hero/commercial-header.jpg
 hero-class: bg--dark bg--50 text--light
-hero-title: <span class="text-xl">Commercial</span><br>Projects
+hero-title: <span class="text-xl">Painting</span><br>Services
 
 mainimage: /assets/img/commercial/DesignCenter012.jpg
 images:
@@ -37,7 +37,7 @@ images:
   <div class="grid-x grid-padding-x grid-padding-y">
     <div class="large-12 cell">
 
-      <h2>Combining Resources from Residential to Commercial</h2>
+      <h2>add stuff here</h2>
 
       <div class="card gallery-trigger float-right gallery-trigger--right" type="button" data-toggle="gallery1" role="button">
         <img src="/assets/img/commercial/DesignCenter012.jpg" sizes="" alt="" class="" />
@@ -47,7 +47,7 @@ images:
       </div>
 
       <p>
-      Generation Homes & Commercial and affiliates have been in business since 1996. While we are primarily known for our <a href="/services-remodel.html">residential</a> construction projects, we have been quietly involved in a diverse array of commercial projects.
+      Generation Homes and affiliates have been in business since 1996. While we are primarily known for our <a href="/services-remodel.html">residential</a> construction projects, we have been quietly involved in a diverse array of commercial projects.
       </p>
 
       <p>
