--- a/src/pages/services-custom-homes.html
+++ b/src/pages/services-custom-homes.html
@@ -1,10 +1,10 @@
 ---
-title: Generation Homes | New Homes
+title: Generation Homes & Commercial | New Homes
 description: add desc
 
 hero-bg:  /assets/img/new_construction/Cascadel.jpg
 hero-class: bg--dark bg--80 text--light
-hero-title: <span class="text-xl">New Homes</span><br>Focus on Quality and craftsmanship
+hero-title: <span class="text-xl">Custom Homes</span><br>Focus on Quality and craftsmanship
 
 mainimage: /assets/img/new_construction/Cascadel.jpg
 images:
@@ -31,11 +31,11 @@ images:
   <div class="grid-x grid-padding-x grid-padding-y">
     <div class="large-12 cell">
 
-      <h2>New Home Construction that focuses on Quality and Craftsmanship</h2>
+      <h2>Custom Home Construction that focuses on Quality and Craftsmanship</h2>
       <div class="card gallery-trigger float-right gallery-trigger--right" type="button" data-toggle="gallery1" role="button">
         <img src="/assets/img/new_construction/Cascadel.jpg" sizes="" alt="" class="" />
         <div class="card-section">
-          <p>View our New Homes gallery <a href="#">here</a> &rsaquo;</p>
+          <p>View our Custom Homes gallery <a href="#">here</a> &rsaquo;</p>
         </div>
       </div>
 
@@ -51,7 +51,7 @@ Our new home construction focus is on not only providing the best in craftsmansh
 <hr>
 
       <p>
-      Generation Homes is more than just a general contractor for Fresno, CA — We are a respected builder, serving the Central Valley since 1996 with a diverse background in home building and remodeling. Having built more than 1,000 homes – whether they were part of large single-family communities, upscale custom homes built for those with discerning taste and a demand for attention to detail, or custom kitchen, bath, and whole-home remodels – we continue our drive to be your builder of choice.
+      Generation Homes & Commercial is more than just a general contractor for Fresno, CA — We are a respected builder, serving the Central Valley since 1996 with a diverse background in home building and remodeling. Having built more than 1,000 homes – whether they were part of large single-family communities, upscale custom homes built for those with discerning taste and a demand for attention to detail, or custom kitchen, bath, and whole-home remodels – we continue our drive to be your builder of choice.
       </p>
 
       <p>
