--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -1,5 +1,5 @@
 ---
-title: Generation Homes | Services we offer
+title: Generation Homes & Commercial | Services we offer
 description: add desc
 
 hero-bg: /assets/img/hero/services-header.jpg
@@ -15,16 +15,16 @@ hero-title: <span class="text-xl">Services</span><br>Residential, New Homes, Com
       <div class="grid-x grid-padding-x">
         <div class="large-12 cell">
 
-          <h2>Home Remodel</h2>
+          <h2>Home Remodeling</h2>
 
           <p>
-          We have done everything from simple bathroom remodels to complete home renovations. These include virtually every type of home; from historically significant to just adding on a room or garage to meet your needs. We pride ourselves on meeting the customer’s needs from both the desired end result to budget constraints. We deploy a variety of both internal and external professionals to meet every client’s demands. You will find with Generation Homes that we openly share costs of construction and offer a variety of solutions to meet your needs.
+          We have done everything from simple bathroom remodels to complete home renovations. These include virtually every type of home; from historically significant to just adding on a room or garage to meet your needs. We pride ourselves on meeting the customer’s needs from both the desired end result to budget constraints. We deploy a variety of both internal and external professionals to meet every client’s demands. You will find with Generation Homes & Commercial that we openly share costs of construction and offer a variety of solutions to meet your needs.
           </p>
 
-          <h2>New Home Construction</h2>
+          <h2>Custom Homes</h2>
 
           <p>
-          Generation Homes has constructed over 750 new homes from every level; first time buyer, move up markets, and custom homes since 1996. We fully understand the demands for modern lifestyles that must create highly efficient and livable floor plans with enduring design. It is our utmost to focus on the highest in quality materials and finished product to meet and exceed our customers’ expectations. Please look at our current neighborhoods or let us create a home of ours or one of your custom designs.
+          Generation Homes & Commercial has constructed over 750 new homes from every level; first time buyer, move up markets, and custom homes since 1996. We fully understand the demands for modern lifestyles that must create highly efficient and livable floor plans with enduring design. It is our utmost to focus on the highest in quality materials and finished product to meet and exceed our customers’ expectations. Please look at our current neighborhoods or let us create a home of ours or one of your custom designs.
           </p>
 
           <h2>Commercial Construction</h2>
@@ -32,6 +32,19 @@ hero-title: <span class="text-xl">Services</span><br>Residential, New Homes, Com
           <p>
           Generation Commercial Construction has been involved in California projects that have reconstructed historically significant buildings, new general office construction to simple tenant improvements. Our experience aligns our client’s needs, budget constraints, and professionals to provide a great breadth of construction solutions.
           </p>
+
+          <h2>Painting</h2>
+
+          <p>
+          Add stuff here
+          </p>
+
+          <h2>The Phoenix Project</h2>
+
+          <p>
+          Add stuff here
+          </p>
+
 
         </div>
       </div>
